Really Completed main page

--- a/menu/templates/menu/main.html
+++ b/menu/templates/menu/main.html
@@ -4,7 +4,6 @@
 
 <head>
   <meta charset="utf-8">
-
 </head>
 
 <script src="http://code.jquery.com/jquery-latest.js"></script>
@@ -17,32 +16,34 @@
     <img onclick="$('html, body').stop().animate( { scrollTop : '930' } );" src= "{% static 'menu/img/cat.png' %}"  style="position: absolute; left: 1350px; top: 200px">
     <img onclick="$('html, body').stop().animate( { scrollTop : '1800' } );" src= "{% static 'menu/img/etc.png' %}" style="position: absolute; left: 1700px; top: 200px">
 
-    <div align = "right"><button type="button" style="width:100pt; height:40pt; background-color:#BDBDBD; font-size : 15pt;">글 올리기</button></div>
+    <div align = "right"><button type="button" style="border : 0; background-color : white; position: absolute; left: 1770px; top: 30px;"><img src="{% static 'menu/img/postBtn.png' %}"></button></div>
+
 
     <!--강아지 -->
     <div id = "#Dog">
       <img src="{% static 'img/background.jpg' %}" style="position: absolute; left: 0px; top: 300px">
-      <a href = 'chiwawaPage.html'><img src="{% static 'menu/img/hDog.png' %}" style="position: absolute; left: 100px; top: 450px"></a>
-      <a href = 'sivaPage.html'><img src="{% static 'menu/img/cDog.png' %}" style="position: absolute; left: 700px; top: 450px"></a>
-      <a href = 'cogiPage.html'><img src="{% static 'menu/img/wDog.png' %}" style="position: absolute; left: 1300px; top: 450px"></a>
+      <a href = 'chiwawa.html'><img src="{% static 'menu/img/hDog.png' %}" style="position: absolute; left: 100px; top: 450px"></a>
+      <a href = 'siva.html'><img src="{% static 'menu/img/cDog.png' %}" style="position: absolute; left: 700px; top: 450px"></a>
+      <a href = 'cogi.html'><img src="{% static 'menu/img/wDog.png' %}" style="position: absolute; left: 1300px; top: 450px"></a>
     </div>
 
     <!--고양이-->
     <div id = "#Cat">
       <img src="{% static 'img/background.jpg' %}" style="position: absolute; left: 0px; top: 970px">
-      <a href = 'shiamPage.html'><img src="{% static 'menu/img/sCat.png' %}" style="position: absolute; left: 100px; top: 1150px"></a>
-      <a href = 'bombeiPage.html'><img src="{% static 'menu/img/bCat.png' %}" style="position: absolute; left: 700px; top: 1150px"></a>
+      <a href = 'shiam.html'><img src="{% static 'menu/img/sCat.png' %}" style="position: absolute; left: 100px; top: 1150px"></a>
+      <a href = 'bombei.html'><img src="{% static 'menu/img/bCat.png' %}" style="position: absolute; left: 700px; top: 1150px"></a>
       <a href = 'tabie.html'><img src="{% static 'menu/img/nCat.png' %}" style="position: absolute; left: 1300px; top: 1150px"></a>
     </div>
 
     <!--그 외 -->
     <div id = "#Etc">
       <img src="{% static 'img/background.jpg' %}" style="position: absolute; left: 0px; top: 1650px">
-      <a href ""><img src="{% static 'menu/img/hEtc.png' %}" style="position: absolute; left: 350px; top: 1800px"></a>
-      <a href ""><img src="{% static 'menu/img/bEtc.png' %}" style="position: absolute; left: 1000px; top: 1800px"></a>
+      <a href = 'hedge.html'><img src="{% static 'menu/img/hEtc.png' %}" style="position: absolute; left: 350px; top: 1800px"></a>
+      <a href = 'bierd.html'><img src="{% static 'menu/img/bEtc.png' %}" style="position: absolute; left: 1000px; top: 1800px"></a>
     </div>
 
-    <div align = "right"><button type="button" onclick="$('html, body').stop().animate( { scrollTop : '-2000' } );" style="width:60pt; height:60pt; background-color:46CCFF; position: absolute; left: 1800px; top: 2100px; font-size : 15pt;">TOP</button></div>
+    <button type="button" onclick="$('html, body').stop().animate( { scrollTop : '-2000' } );" style="border : 0; background-color:whilte; position: absolute; left: 1800px; top: 2200px; font-size : 15pt;"><img src="{% static 'menu/img/topBtn.png' %}"></button>
+<body>
 
 <body>
 
