--- a/menu/templates/menu/BierdPage.html
+++ b/menu/templates/menu/BierdPage.html
@@ -1,7 +1,7 @@
 {% load staticfiles %}
 <html>
   <body>
-    <div align="center"><img src = "{% static 'menu/img/sCatPage.png' %}" align = "center"></div>
+    <div align="center"><img src = "{% static 'menu/img/bEtcPage.png' %}" align = "center"></div>
   </br></br></br></br></br>
   <h3>댓글</h3>
   <hr align=left width=60%>
