--- a/menu/templates/menu/bombeiPage.html
+++ b/menu/templates/menu/bombeiPage.html
@@ -1,6 +1,7 @@
+{% load staticfiles %}
 <html>
   <body>
-    <div align="center"><img src = "Resource/bCatPage.png" align = "center"></div>
+    <div align="center"><img src = "{% static 'menu/img/bCatPage.png' %}" align = "center"></div>
     </br></br></br></br></br>
     <h3>댓글</h3>
     <hr align=left width=60%>
