--- a/menu/templates/menu/chiwawaPage.html
+++ b/menu/templates/menu/chiwawaPage.html
@@ -1,6 +1,7 @@
+{% load staticfiles %}
 <html>
   <body>
-    <div align="center"><img src = "Resource/pPage.png" align = "center"></div>
+    <div align="center"><img src = "{% static 'menu/img/pPage.png' %}" align = "center"></div>
   </br></br></br></br></br>
   <h3>댓글</h3>
   <hr align=left width=60%>
