--- a/menu/templates/menu/cogiPage.html
+++ b/menu/templates/menu/cogiPage.html
@@ -1,6 +1,7 @@
+{% load staticfiles %}
 <html>
   <body>
-    <div align="center"><img src = "Resource/wPage.png" align = "center"></div>
+    <div align="center"><img src = "{% static 'menu/img/wPage.png' %}" align = "center"></div>
   </br></br></br></br></br>
   <h3>댓글</h3>
   <hr align=left width=60%>
