--- a/menu/templates/menu/base.html
+++ b/menu/templates/menu/base.html
@@ -4,17 +4,23 @@
 
 <head>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="{% static 'menu/css/bootstrap.css'%}">
+  <link href="{% static 'menu/css/style.css'%}" rel="stylesheet" type="text/css">
 </head>
 
-<script src="http://code.jquery.com/jquery-latest.js"></script>
+<title>천생연PET</title>    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 
 <body>
-    <a href = 'main.html'><img src="{% static 'menu/img/Title.png' %}"  style="position: absolute; left: 50px; top: 50px"> <!-- 타이틀 이미지 --></a>
+  <div>
+    <a href = 'main.html'>
+      <img src="{% static 'menu/img/Title.png' %}"  style="position: absolute; left: 50px; top: 50px"> <!-- 타이틀 이미지 -->
+    </a>
 
     <!--메뉴 -->
     <a href = ""><img src= "{% static 'menu/img/dog.png' %}" style="position: absolute; left: 1000px; top: 200px"></a>
     <a href = ""><img src= "{% static 'menu/img/cat.png' %}"  style="position: absolute; left: 1350px; top: 200px"></a>
     <a href = ""><img src= "{% static 'menu/img/etc.png' %}" style="position: absolute; left: 1700px; top: 200px"></a>
+  </div>
 
     <a href = 'new.html'><img src="{% static 'menu/img/postBtn.png' %}" style="position: absolute; left: 1770px; top: 30px"></a>
 
@@ -22,11 +28,27 @@
     {% endblock %}
 
     </br></br></br></br></br>
-    <h3>댓글</h3>
-    <hr align=left width=60%>
-    <button type="button" style="width:80pt; height:30pt; margin : 5px 0px 0px 0px; background-color:#BDBDBD; font-size : 13pt;">등록</button></br>
-    <textarea rows="10" cols="80" name="contents" style="margin : 40px 10px 0px 0px"></textarea>
+    <div>
+      <div>
+        <h3>Comments ({{ pet.comments.count }})</h3>
+        {% for comment in pet.comments.all %}
+        <div class="media">
+          <div class="media-left">
+            <a href="#">
+              <img class="media-object" src="{% static 'menu/img/DFootPrint.png' %}" alt="">
+            </a>
+          </div>
+          <div class="media-body">
+            <h4 class="media-heading">
+            <p>{{ comment.text|linebreaks }}</p>
+            <i>{{ comment.created_date }}</i>
+          </div>
+        </div>
+        {% empty %}
+        {% endfor %}
+      </div>
+    </div>
+  </div>
 
-    <button type="button" onclick="$('html, body').stop().animate( { scrollTop : '-2000' } );" style="border : 0; background-color:whilte; position: absolute; left: 1800px; top: 2200px; font-size : 15pt;"><img src="{% static 'menu/img/topBtn.png' %}"></button>
 <body>
 </html>
