--- a/menu/templates/menu/shiamPage.html
+++ b/menu/templates/menu/shiamPage.html
@@ -2,5 +2,5 @@
 {% load staticfiles %}
 
 {% block content %}
-    <div align="center"><img src = "{% static 'menu/img/sCatPage.png' %}" align = "center"></div>
+    <img src = "{% static 'menu/img/sCatPage.png' %}" >
 {% endblock %}
