--- a/menu/templates/menu/sivaPage.html
+++ b/menu/templates/menu/sivaPage.html
@@ -2,5 +2,10 @@
 {% load staticfiles %}
 
 {% block content %}
-    <div align="center"><img src = "{% static 'menu/img/spage.png' %}" align = "center"></div>
+    <div style="margin-top:5%;">
+      <img src = "{% static 'menu/img/spage.png' %}"></div>
+    <form method="POST">{% csrf_token %}
+      {{ form.as_p }}
+      <button type="submit" class="btn btn-default">댓글달기</button>
+    </form>
 {% endblock %}
