--- a/menu/templates/menu/cogiPage.html
+++ b/menu/templates/menu/cogiPage.html
@@ -2,5 +2,5 @@
 {% load staticfiles %}
 
 {% block content %}
-    <div align="center"><img src = "{% static 'menu/img/wPage.png' %}" align = "center"></div>
+  <img src = "{% static 'menu/img/wPage.png' %}">
 {% endblock %}
