--- a/menu/templates/menu/main.html
+++ b/menu/templates/menu/main.html
@@ -4,14 +4,22 @@
 
 <head>
   <meta charset="utf-8">
+  <script>
+  var i = 1;
+  {% for pet in pets %}
+      document.write("{{pet.title}}")
+      if(i++ % 3 ==0)
+          document.write("\n")
+  {% endfor %}
+</script>
 </head>
 
 <script src="http://code.jquery.com/jquery-latest.js"></script>
 
 <body>
-    <a href = 'main.html'><img src="{% static 'menu/img/Title.png' %}"  style="position: absolute; left: 50px; top: 50px"> <!-- 타이틀 이미지 --></a>
+    <a href = 'main'><img src="{% static 'menu/img/Title.png' %}"  style="position: absolute; left: 50px; top: 50px"> <!-- 타이틀 이미지 --></a>
 
-    <a href = 'new.html'><img src="{% static 'menu/img/postBtn.png' %}" style="position: absolute; left: 1770px; top: 30px"></a>
+    <a href = 'new'><img src="{% static 'menu/img/postBtn.png' %}" style="position: absolute; left: 1770px; top: 30px"></a>
 
     <!--메뉴 -->
     <a href = ""><img src= "{% static 'menu/img/dog.png' %}" style="position: absolute; left: 1000px; top: 200px"></a>
@@ -21,28 +29,31 @@
     <!--강아지 -->
     <div id = "#Dog">
       <img src="{% static 'img/background.jpg' %}" style="position: absolute; left: 0px; top: 300px">
-      <a href = 'chiwawaPage.html'><img src="{% static 'menu/img/hDog.png' %}" style="position: absolute; left: 100px; top: 450px"></a>
-      <a href = 'siva.html'><img src="{% static 'menu/img/cDog.png' %}" style="position: absolute; left: 700px; top: 450px"></a>
-      <a href = 'cogi.html'><img src="{% static 'menu/img/wDog.png' %}" style="position: absolute; left: 1300px; top: 450px"></a>
+      <a href = 'chiwawaPage'><img src="{% static 'menu/img/hDog.png' %}" style="position: absolute; left: 100px; top: 450px"></a>
+      <a href = 'siva'><img src="{% static 'menu/img/cDog.png' %}" style="position: absolute; left: 700px; top: 450px"></a>
+      <a href = 'cogi'><img src="{% static 'menu/img/wDog.png' %}" style="position: absolute; left: 1300px; top: 450px"></a>
     </div>
 
     <!--고양이-->
     <div id = "#Cat">
       <img src="{% static 'img/background.jpg' %}" style="position: absolute; left: 0px; top: 970px">
-      <a href = 'shiam.html'><img src="{% static 'menu/img/sCat.png' %}" style="position: absolute; left: 100px; top: 1150px"></a>
-      <a href = 'bombei.html'><img src="{% static 'menu/img/bCat.png' %}" style="position: absolute; left: 700px; top: 1150px"></a>
-      <a href = 'tabie.html'><img src="{% static 'menu/img/nCat.png' %}" style="position: absolute; left: 1300px; top: 1150px"></a>
+      <a href = 'shiam'><img src="{% static 'menu/img/sCat.png' %}" style="position: absolute; left: 100px; top: 1150px"></a>
+      <a href = 'bombei'><img src="{% static 'menu/img/bCat.png' %}" style="position: absolute; left: 700px; top: 1150px"></a>
+      <a href = 'tabie'><img src="{% static 'menu/img/nCat.png' %}" style="position: absolute; left: 1300px; top: 1150px"></a>
     </div>
 
     <!--그 외 -->
     <div id = "#Etc">
       <img src="{% static 'img/background.jpg' %}" style="position: absolute; left: 0px; top: 1650px">
-      <a href = 'hedge.html'><img src="{% static 'menu/img/hEtc.png' %}" style="position: absolute; left: 350px; top: 1800px"></a>
-      <a href = 'bierd.html'><img src="{% static 'menu/img/bEtc.png' %}" style="position: absolute; left: 1000px; top: 1800px"></a>
+      <a href = 'hedge'><img src="{% static 'menu/img/hEtc.png' %}" style="position: absolute; left: 350px; top: 1800px"></a>
+      <a href = 'bierd'><img src="{% static 'menu/img/bEtc.png' %}" style="position: absolute; left: 1000px; top: 1800px"></a>
     </div>
 
-    <button type="button" onclick="$('html, body').stop().animate( { scrollTop : '-2000' } );" style="border : 0; background-color:whilte; position: absolute; left: 1800px; top: 2200px; font-size : 15pt;">
-      <img src="{% static 'menu/img/topBtn.png' %}">
-    </button>
+
+      <button type="button"
+      onclick="$('html, body').stop().animate( { scrollTop : '-2000' } );"
+      style="border : 0; background-color:whilte; position: absolute; left: 1800px; top: 2200px; font-size : 15pt;">
+        <img src="{% static 'menu/img/topBtn.png' %}">
+      </button>
 
 </html>
