--- a/menu/templates/menu/HedgePage.html
+++ b/menu/templates/menu/HedgePage.html
@@ -2,5 +2,5 @@
 {% load staticfiles %}
 
 {% block content %}
-    <div align="center"><img src = "{% static 'menu/img/hEtcPage.png' %}" align = "center"></div>
+  <img src = "{% static 'menu/img/hEtcPage.png' %}"
 {% endblock %}
