--- a/menu/templates/menu/TabiePage.html
+++ b/menu/templates/menu/TabiePage.html
@@ -2,5 +2,5 @@
 {% load staticfiles %}
 
 {% block content %}
-    <div align="center"><img src = "{% static 'menu/img/cCatPage.png' %}" align = "center"></div>
+    <img src = "{% static 'menu/img/cCatPage.png' %}">
 {% endblock %}
