--- a/menu/templates/menu/chiwawaPage.html
+++ b/menu/templates/menu/chiwawaPage.html
@@ -2,5 +2,5 @@
 {% load staticfiles %}
 
 {% block content %}
-  <div align="center"><img src = "{% static 'menu/img/pPage.png' %}" align = "center"></div>
+  <img src = "{% static 'menu/img/pPage.png' %}">
 {% endblock %}
